// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BillingPaymentMethod Shopify should render a button 1`] = `
<BillingPaymentMethod
  creditCard={
    Immutable.Map {
    }
  }
  currentPlan={
    Immutable.Map {
      amount: 12,
      currencySign: "$",
    }
  }
  fetchCreditCard={[Function]}
  fetchPaymentMethod={[Function]}
  paymentIsActive={false}
  paymentMethod="shopify"
  shopifyBillingStatus="inactive"
  subscription={
    Immutable.Map {
      plan: "basic-usd-1",
    }
  }
>
  <div
    className="mb-5"
  >
    <h4>
      Payment method
    </h4>
    <div
      id="activate-shopify-billing-button"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <Button
        className=""
        color="success"
        disabled={false}
        href="/integrations/shopify/billing/activate/"
        onClick={[Function]}
        tag="a"
      >
        <a
          className="btn btn-success"
          disabled={false}
          href="/integrations/shopify/billing/activate/"
          onClick={[Function]}
        >
          Activate billing with Shopify and pay $12
        </a>
      </Button>
    </div>
  </div>
</BillingPaymentMethod>
`;

exports[`BillingPaymentMethod Shopify should render a button to reactivate billing 1`] = `
<div
  className="mb-5"
>
  <h4>
    Payment method
  </h4>
  <Button
    className=""
    color="success"
    href="/integrations/shopify/billing/activate/"
    onClick={[Function]}
    tag="a"
  >
    Reactivate billing with Shopify
  </Button>
</div>
`;

exports[`BillingPaymentMethod Shopify should render a disabled button 1`] = `
<div
  className="mb-5"
>
  <h4>
    Payment method
  </h4>
  <div
    id="activate-shopify-billing-button"
    style={
      Object {
        "display": "inline-block",
      }
    }
  >
    <Button
      className=""
      color="success"
      disabled={true}
      href="/integrations/shopify/billing/activate/"
      onClick={[Function]}
      tag="a"
    >
      Activate billing with Shopify
    </Button>
    <UncontrolledTooltip
      placement="top"
      target="activate-shopify-billing-button"
    >
      Select a plan before activating Shopify billing
    </UncontrolledTooltip>
  </div>
</div>
`;

exports[`BillingPaymentMethod Shopify should render an active status 1`] = `
<BillingPaymentMethod
  creditCard={
    Immutable.Map {
    }
  }
  currentPlan={
    Immutable.Map {
    }
  }
  fetchCreditCard={[Function]}
  fetchPaymentMethod={[Function]}
  paymentIsActive={true}
  paymentMethod="shopify"
  shopifyBillingStatus="active"
  subscription={
    Immutable.Map {
      plan: "basic-usd-1",
    }
  }
>
  <div
    className="mb-5"
  >
    <h4>
      Payment method
    </h4>
    <p
      className="mt-2 mb-2"
    >
      Payment with Shopify activated.
    </p>
  </div>
</BillingPaymentMethod>
`;

exports[`BillingPaymentMethod Stripe should render a button 1`] = `
<BillingPaymentMethod
  creditCard={
    Immutable.Map {
    }
  }
  currentPlan={
    Immutable.Map {
    }
  }
  fetchCreditCard={[Function]}
  fetchPaymentMethod={[Function]}
  paymentIsActive={true}
  paymentMethod="stripe"
  subscription={
    Immutable.Map {
      plan: "basic-usd-1",
    }
  }
>
  <div
    className="mb-5"
  >
    <h4>
      Payment method
    </h4>
    <div>
      <p
        className="mt-2 mb-2"
      >
        No credit card registered
      </p>
      <div
        id="add-credit-card-button"
        style={
          Object {
            "display": "inline-block",
          }
        }
      >
        <Button
          color="success"
          disabled={false}
          tag={[Function]}
          to="/app/settings/billing/add-credit-card"
        >
          <Link
            className="btn btn-success"
            disabled={false}
            onClick={[Function]}
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/billing/add-credit-card"
          >
            <a
              className="btn btn-success"
              disabled={false}
              onClick={[Function]}
              style={Object {}}
            >
              Add Credit Card
            </a>
          </Link>
        </Button>
      </div>
    </div>
  </div>
</BillingPaymentMethod>
`;

exports[`BillingPaymentMethod Stripe should render a button to update a credit card 1`] = `
<BillingPaymentMethod
  creditCard={
    Immutable.Map {
      brand: "Visa",
      last4: 4242,
      exp_month: 9,
      exp_year: 2017,
    }
  }
  currentPlan={
    Immutable.Map {
    }
  }
  fetchCreditCard={[Function]}
  fetchPaymentMethod={[Function]}
  paymentIsActive={true}
  paymentMethod="stripe"
  subscription={
    Immutable.Map {
      plan: "basic-usd-1",
    }
  }
>
  <div
    className="mb-5"
  >
    <h4>
      Payment method
    </h4>
    <div>
      <p
        className="mt-2 mb-2"
      >
        <span>
          Visa
           ending in 
          <strong>
            4242
             
          </strong>
          and expiring on 
          <em>
            9
            /
            2017
          </em>
        </span>
      </p>
      <Button
        color="secondary"
        tag={[Function]}
        to="/app/settings/billing/update-credit-card"
      >
        <Link
          className="btn btn-secondary"
          onClick={[Function]}
          onlyActiveOnIndex={false}
          style={Object {}}
          to="/app/settings/billing/update-credit-card"
        >
          <a
            className="btn btn-secondary"
            onClick={[Function]}
            style={Object {}}
          >
            Update Credit Card
          </a>
        </Link>
      </Button>
    </div>
  </div>
</BillingPaymentMethod>
`;

exports[`BillingPaymentMethod Stripe should render a disabled button 1`] = `
<div
  className="mb-5"
>
  <h4>
    Payment method
  </h4>
  <div>
    <p
      className="mt-2 mb-2"
    >
      No credit card registered
    </p>
    <div
      id="add-credit-card-button"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <Button
        color="success"
        disabled={true}
        tag={[Function]}
        to="/app/settings/billing/add-credit-card"
      >
        Add Credit Card
      </Button>
      <UncontrolledTooltip
        placement="top"
        target="add-credit-card-button"
      >
        Select a plan before adding a credit card
      </UncontrolledTooltip>
    </div>
  </div>
</div>
`;

exports[`BillingPaymentMethod Stripe should render a loader 1`] = `
<BillingPaymentMethod
  creditCard={
    Immutable.Map {
    }
  }
  currentPlan={
    Immutable.Map {
    }
  }
  fetchCreditCard={[Function]}
  fetchPaymentMethod={[Function]}
  paymentIsActive={true}
  paymentMethod="stripe"
>
  <Loader
    inline={false}
  >
    <div
      className="loader-container"
    >
      <div
        className="loader-inner"
      >
        <i
          className="fa fa-fw fa-circle-o-notch fa-spin"
        />
      </div>
    </div>
  </Loader>
</BillingPaymentMethod>
`;
